--- a/src/app/main/profile/editProfile/profile.html
+++ b/src/app/main/profile/editProfile/profile.html
@@ -322,7 +322,7 @@
 
                                 <div class="col-md-6">
                                     <label class=" uppercase font-weight  "> Mother toungue</label>
-                                    <select class="form-control input-rounded " ng-model="selectMotherTounge"
+                                    <select class="form-control input-rounded " ng-model="selectLanguage.motherTongue"
 
                                             ng-options="item.mothertongue for item in motherTongueList track by item.id_mothertongue">
                                     </select>
