--- a/src/app/main/dashboard/inbox/inbox.html
+++ b/src/app/main/dashboard/inbox/inbox.html
@@ -21,8 +21,8 @@
                                             </div>
                                             <div class="col-md-6">
                                                 <uib-progressbar class="profile-progress-bar" animate="true"
-                                                                 value="dynamic"
-                                                                 type="success"><b>10%</b></uib-progressbar>
+                                                                 value="value"
+                                                                 type="success"><b>{{value}}%</b></uib-progressbar>
                                             </div>
                                         </div>
                                     </div>
@@ -129,7 +129,7 @@
 
                     </div>
 
-                    <div class="col-md-12 ">
+                    <div class="col-md-12 " ng-if="newMatches.matches.length > 0">
                         <!-- BEGIN SAMPLE FORM PORTLET-->
                         <div class="portlet light bordered">
                             <div class="portlet-title">
@@ -196,7 +196,7 @@
 
                     </div>
 
-                    <div class="col-md-12 ">
+                    <div class="col-md-12 " ng-if="viewed.matches.length > 0">
                         <!-- BEGIN SAMPLE FORM PORTLET-->
                         <div class="portlet light bordered">
                             <div class="portlet-title">
@@ -216,23 +216,29 @@
                                 </div>
                             </div>
                             <div class="portlet-body form">
-                                <div class="row ">
+                                <div class="row" ng-repeat="item in viewed.matches">
                                     <div class=" col-xs-3 col-sm-3 col-md-2 ">
-                                        <img class="imgae-circle"
-                                             ng-src="../assets/images/prof1.jpg"/>
+                                        <img ng-if="item.images.length > 0" class="imgae-circle"
+                                             ng-src="{{item.images[0]}}"/>
+                                        <img ng-if="item.gender == 'male'" class="imgae-circle"
+                                             ng-src="/assets/defaultImages/male_card.jpg"/>
+                                        <img ng-if="item.gender == 'female'" class="imgae-circle"
+                                             ng-src="/assets/defaultImages/female_card.jpg"/>
                                     </div>
                                     <div class="col-xs-1 col-sm-1 hidden-md hidden-lg"></div>
                                     <div class="col-xs-7 col-sm-7 col-md-6">
+
                                         <div class="row ">
                                             <div class="col-md-12">
-                                                        <span><a ui-sref="viewProfile" class="profile-name">Priya Renjini</a>&nbsp;<span
-                                                                class="profile-id"> (PD12345)</span></span>
+                                                        <span><a ui-sref="viewProfile" class="profile-name">{{item.name}}</a>&nbsp;<span
+                                                                class="profile-id"> ({{item.id_people}})</span></span>
                                             </div>
                                         </div>
                                         <div class="row ">
                                             <div class="col-md-12">
                                                                         <span class="profile-details">
-                                                                            25,5.3cms,Tamil,Hindu,Manal Tamilnadu, India
+                                                                            {{item.age}},<span ng-if="item.height != null">{{item.height}}cms</span>,{{item.mothertongue}},{{item.caste}},{{item.star}} ,
+                                                                            {{item.state_name}}, {{item.country_name}}
                                                                         </span>
                                             </div>
                                         </div>
