--- a/src/app/main/profile/editProfile/profile.html
+++ b/src/app/main/profile/editProfile/profile.html
@@ -405,7 +405,7 @@
                                     <!--</button>-->
                                     &nbsp;
                                     <button type="button" ng-click="basic()" class=" btn btn-default red input-rounded "
-                                            style="color:#ffffea" ng-click="">
+                                            style="color:#ffffea" >
                                         Save
                                     </button>
 
