--- a/src/app/main/payment/payment.html
+++ b/src/app/main/payment/payment.html
@@ -208,7 +208,7 @@
                                                         <div class="col-md-12 col-sm-12 col-xs-12 feature-box  " >
                                                             <div class="row ">
                                                                 <div class="col-md-3 col-sm-3 col-xs-3 margin-top-15 ">
-                                                                    <span  class="socicon-btn socicon-btn-circle socicon-mail tooltips greeen-icon" data-original-title="Mail"></span>
+                                                                    <span  class="greeen-icon socicon-btn socicon-btn-circle socicon-mail tooltips" data-original-title="Mail"></span>
                                                                     <div class="row ">
                                                                         <div class="col-md-12 col-sm-12 col-xs-12 ">
                                                                             <span style="font-size: 10px">Send unlimited 30 personal messages</span>
