--- a/src/app/main/payment/payment.css
+++ b/src/app/main/payment/payment.css
@@ -38,7 +38,7 @@
 }
 
 .feature-box{
-    border: 1px solid red !important;
+    border: 1px solid #777777 !important;
     height: 100px !important;
 }
 .greeen-icon{
@@ -52,6 +52,12 @@
         /*margin-right: 25px;*/
         margin-top: 25px;
         margin-bottom: 50px;
+    }
+}
+@media (max-width: 451px) {
+    .feature-box{
+        border: 1px solid #777777 !important;
+        height: 150px !important;
     }
 }
 
