--- a/src/app/main/profile/editProfile/profile.html
+++ b/src/app/main/profile/editProfile/profile.html
@@ -79,9 +79,13 @@
 
                                     <select class="form-control input-rounded "
                                             ng-model="profile.login_user.profile_for">
-                                        <option>Select</option>
-                                        <option value="son">Son</option>
+                                        <option value="myself">My self</option>
                                         <option value="daughter">Daughter</option>
+                                        <option value="son">Son</option>
+                                        <option value="brother">Brother</option>
+                                        <option value="sister">Sister</option>
+                                        <option value="relative">Relative</option>
+                                        <option value="friend">Friend</option>
                                     </select>
                                 </div>
 
