--- a/src/app/navigation/dashboard/dbNavigation.html
+++ b/src/app/navigation/dashboard/dbNavigation.html
@@ -29,7 +29,9 @@
                                                         <span class="menu-option"><a style="color: red" ui-sref="profile">Edit Profile</a></span>
                                                     </div>
                                                     <div class="col-md-12">
-                                                        <span class="menu-option">Edit partner preference</span>
+                                                        <span class="menu-option"><a style="color: red" ui-sref="profile">
+                                                            Edit partner preference</a>
+                                                        </span>
                                                     </div>
                                                 </div>
                                             </div>
