--- a/src/app/navigation/profile/profileNavigation.html
+++ b/src/app/navigation/profile/profileNavigation.html
@@ -3,7 +3,7 @@
         <div style="background-color: white;">
             <div class="row">
                 <div class="col-md-12 " style="text-align:center;margin-top: 20px">
-                    <img style="width: 100px;height: 130px;!important;" ng-src="{{image_url}}"/>
+                    <img style="height: 130px;!important;" ng-src="{{image_url}}"/>
                 </div>
                 <div class="col-md-12  " style="text-align:center;margin-top: 20px">
                     <span class="bold">{{name}}</span><br>
