--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -77,8 +77,16 @@
                 <div class="form-group">
                     <label class="col-md-3 control-label">DATE OF BIRTH<span style="color: red">*</span></label>
 
-                    <div class="col-md-8">
+                   <!-- <div class="col-md-8">
                         <input type="date" required class="form-control input-rounded" ng-model="reg.dob" placeholder="Date of Birth">
+                    </div>-->
+                    <div class="col-md-6">
+                        <p class="input-group">
+                            <input type="text" class="form-control" uib-datepicker-popup ng-model="reg.dob" is-open="popup2.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
+          <span class="input-group-btn">
+            <button type="button" class="btn btn-default" ng-click="open2()"><i class="glyphicon glyphicon-calendar"></i></button>
+          </span>
+                        </p>
                     </div>
                 </div>
                 <div class="form-group">
