--- a/src/app/main/search/regular/regular.html
+++ b/src/app/main/search/regular/regular.html
@@ -282,7 +282,7 @@
                             <hr>
                             <div class="form-group">
                                 <div class="col-md-offset-8">
-                                    <button type="button" class=" btn red input-rounded " ng-click="">
+                                    <button type="button" class=" btn red input-rounded " ng-click="search()">
                                         Save & Search
                                     </button>
 
