--- a/src/app/main/search/regular/regular.html
+++ b/src/app/main/search/regular/regular.html
@@ -135,30 +135,18 @@
                                 <div class="col-md-6">
                                     <label class=" uppercase font-weight "> Religion</label>
 
-                                    <select class="form-control input-rounded ">
-                                        <option>Select</option>
-                                        <option>Christian</option>
-                                        <option>Hindu</option>
-                                        <option>Muslim</option>
-                                        <option>Others</option>
-
+                                    <select multiple="multiple" class="multi-select form-control input-rounded "
+                                            ng-model="multiValue.religion"
+                                            ng-options="item.religion for item in religonList track by item.id_religion">
                                     </select>
                                 </div>
 
                                 <div class="col-md-6">
                                     <label class=" uppercase font-weight  "> Mother toung</label>
 
-                                    <select class="form-control input-rounded ">
-                                        <option>Select Mother Toung</option>
-                                        <option>Malayalam</option>
-                                        <option>Tamil</option>
-                                        <option>Telengu</option>
-                                        <option>Kanada</option>
-                                        <option>English</option>
-                                        <option>Hindi</option>
-                                        <option>Others</option>
-
-
+                                    <select multiple="multiple" class="multi-select form-control input-rounded "
+                                            ng-model="multiValue.mothertongue"
+                                            ng-options="item.mothertongue for item in motherTongueList track by item.id_mothertongue">
                                     </select>
                                 </div>
 
@@ -181,16 +169,9 @@
                                 <div class="col-md-6">
                                     <label class=" uppercase font-weight  "> Country</label>
 
-                                    <select class="form-control input-rounded ">
-                                        <option>Select</option>
-                                        <option>India</option>
-                                        <option>UAE</option>
-                                        <option>USA</option>
-                                        <option>Bharin</option>
-                                        <option>Qatar</option>
-                                        <option>Others</option>
-
-
+                                    <select multiple="multiple" class="multi-select form-control input-rounded "
+                                            ng-model="multiValue.country"
+                                            ng-options="item.country_name for item in countryList track by item.id_country">
                                     </select>
                                 </div>
 
@@ -200,32 +181,19 @@
                                 <div class="col-md-6">
                                     <label class=" uppercase font-weight "> Education</label>
 
-                                    <select class="form-control input-rounded ">
-                                        <option>Education Categories</option>
-                                        <option>X</option>
-                                        <option>XII</option>
-                                        <option>Bachelors</option>
-                                        <option>Masters</option>
-                                        <option>Ph.D</option>
-                                        <option>Others</option>
-
+                                    <select multiple="multiple" class="multi-select form-control input-rounded "
+                                            ng-model="multiValue.education"
+                                            ng-options="item.education for item in educationList track by item.id_education">
                                     </select>
                                 </div>
 
                                 <div class="col-md-6">
                                     <label class=" uppercase font-weight  "> &nbsp;</label>
 
-                                    <select class="form-control input-rounded ">
-                                        <option>Selected Categories</option>
-                                        <option>Malayalam</option>
-                                        <option>Tamil</option>
-                                        <option>Telengu</option>
-                                        <option>Kanada</option>
-                                        <option>English</option>
-                                        <option>Hindi</option>
-                                        <option>Others</option>
 
-
+                                    <select multiple="multiple" class="multi-select form-control input-rounded "
+                                            ng-model="multiValue.education_category"
+                                            ng-options="item.education_category for item in educationCategoryList track by item.id_education_category">
                                     </select>
                                 </div>
 
