--- a/src/app/main/managephotos/managephoto.html
+++ b/src/app/main/managephotos/managephoto.html
@@ -189,7 +189,7 @@
 
 
                                 <div class="thumbnail">
-                                    <img ng-src="{{image.image}}" alt="{{image.description}}">
+                                    <img style="height: 150px" ng-src="{{image.image}}" alt="{{image.description}}">
                                 </div>
                                 <div>
                                     <input type="checkbox" ng-model="profilePic" ng-value="{{image.number}}"
