--- a/src/app/main/managephotos/managephoto.html
+++ b/src/app/main/managephotos/managephoto.html
@@ -10,7 +10,7 @@
                     </div>
                 </div>
                 <div class="col-md-12 " style="text-align:center;margin-top: 20px">
-                    <img style="width: 100px;height: 130px;!important;" ng-src="{{image_url}}"/>
+                    <img style="height: 130px;!important;" ng-src="{{image_url}}"/>
                 </div>
 
                 <div class="col-md-12  " style="text-align:center;margin-top: 20px">
