--- a/src/app/main/dashboard/inbox/inbox.html
+++ b/src/app/main/dashboard/inbox/inbox.html
@@ -140,16 +140,16 @@
                                     <div class="row">
                                         <div class="col-md-12 page-action-navigation">
 
-                                            <span class="paginate-message"> View all</span>
-                                            <i class="fa fa-angle-left "></i>
-                                            <i class="fa fa-angle-right "></i>
+                                            <span class="paginate-message"> View all (<span style="color:black"> {{newMatches.matches.length}} </span>)</span>
+                                            <!--<i class="fa fa-angle-left "></i>-->
+                                            <!--<i class="fa fa-angle-right "></i>-->
 
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="portlet-body form">
-                                <div class="row" ng-repeat="item in newMatches.matches">
+                                <div class="row" ng-repeat="item in newMatches.matches | limitTo:4">
                                     <div class=" col-xs-3 col-sm-3 col-md-2 ">
                                         <img ng-if="item.images.length > 0" class="imgae-circle"
                                              ng-src="{{item.images[0]}}"/>
