--- a/src/app/navigation/dashboard-right/dashBoardRight.html
+++ b/src/app/navigation/dashboard-right/dashBoardRight.html
@@ -11,6 +11,9 @@
                             <li class="nav-item nav-header">
                                 <span class=""><span class="nav-header-text">Discover Matches</span></span>
                             </li>
+                            <li class="nav-item">
+
+                            </li>
                             <li class="nav-item  active open">
                                 <ul class="sub-menu">
                                     <!--<li class="nav-item nav-header">-->
@@ -106,7 +109,7 @@
                                                                 <div class="row ">
                                                                     <div class="col-md-12">
                                                                         <span class="send-intrest">
-                                                                            Send intrest
+                                                                           <a style="color: red" ng-click="sendInterest(occu.id_people)"> Send intrest</a>
                                                                         </span>
                                                                         <hr/>
                                                                     </div>
@@ -139,8 +142,12 @@
                                                     <div class="col-md-12">
                                                         <div class="row " ng-repeat="occu in discover.education.matches | limitTo:2">
                                                             <div class=" col-xs-3 col-sm-3 col-md-4 ">
-                                                                <img class="imgae-circle spacer"
-                                                                     ng-src="../assets/images/prof1.jpg"/>
+                                                                <img ng-if="occu.images.length > 0" class="imgae-circle spacer"
+                                                                     ng-src="{{occu.images[0]}}"/>
+                                                                <img ng-if="occu.gender == 'male'" class="imgae-circle spacer"
+                                                                     ng-src="/assets/defaultImages/male_card.jpg"/>
+                                                                <img ng-if="occu.gender == 'female'" class="imgae-circle spacer"
+                                                                     ng-src="/assets/defaultImages/female_card.jpg"/>
                                                             </div>
                                                             <div class="col-md-1 hidden-xs hidden-sm"></div>
                                                             <div class="col-xs-8 col-sm-8 col-md-7">
@@ -160,13 +167,15 @@
                                                                 <div class="row ">
                                                                     <div class="col-md-12">
                                                                         <span class="send-intrest">
-                                                                            Send intrest
+                                                                           <a style="color: red" ng-click="sendInterest(occu.id_people)"> Send intrest</a>
                                                                         </span>
                                                                         <hr/>
                                                                     </div>
                                                                 </div>
                                                             </div>
+
                                                         </div>
+
                                                     </div>
                                                     <!--<div class="col-md-1"></div>-->
                                                 </div>
@@ -192,8 +201,12 @@
                                                     <div class="col-md-12">
                                                         <div class="row " ng-repeat="occu in discover.star.matches | limitTo:2">
                                                             <div class=" col-xs-3 col-sm-3 col-md-4 ">
-                                                                <img class="imgae-circle spacer"
-                                                                     ng-src="../assets/images/prof1.jpg"/>
+                                                                <img ng-if="occu.images.length > 0" class="imgae-circle spacer"
+                                                                     ng-src="{{occu.images[0]}}"/>
+                                                                <img ng-if="occu.gender == 'male'" class="imgae-circle spacer"
+                                                                     ng-src="/assets/defaultImages/male_card.jpg"/>
+                                                                <img ng-if="occu.gender == 'female'" class="imgae-circle spacer"
+                                                                     ng-src="/assets/defaultImages/female_card.jpg"/>
                                                             </div>
                                                             <div class="col-md-1 hidden-xs hidden-sm"></div>
                                                             <div class="col-xs-8 col-sm-8 col-md-7">
@@ -213,7 +226,7 @@
                                                                 <div class="row ">
                                                                     <div class="col-md-12">
                                                                         <span class="send-intrest">
-                                                                            Send intrest
+                                                                           <a style="color: red" ng-click="sendInterest(occu.id_people)"> Send intrest</a>
                                                                         </span>
                                                                         <hr/>
                                                                     </div>
@@ -245,8 +258,12 @@
                                                     <div class="col-md-12">
                                                         <div class="row " ng-repeat="occu in discover.family_values.matches | limitTo:2">
                                                             <div class=" col-xs-3 col-sm-3 col-md-4 ">
-                                                                <img class="imgae-circle spacer"
-                                                                     ng-src="../assets/images/prof1.jpg"/>
+                                                                <img ng-if="occu.images.length > 0" class="imgae-circle spacer"
+                                                                     ng-src="{{occu.images[0]}}"/>
+                                                                <img ng-if="occu.gender == 'male'" class="imgae-circle spacer"
+                                                                     ng-src="/assets/defaultImages/male_card.jpg"/>
+                                                                <img ng-if="occu.gender == 'female'" class="imgae-circle spacer"
+                                                                     ng-src="/assets/defaultImages/female_card.jpg"/>
                                                             </div>
                                                             <div class="col-md-1 hidden-xs hidden-sm"></div>
                                                             <div class="col-xs-8 col-sm-8 col-md-7">
@@ -266,7 +283,7 @@
                                                                 <div class="row ">
                                                                     <div class="col-md-12">
                                                                         <span class="send-intrest">
-                                                                            Send intrest
+                                                                           <a style="color: red" ng-click="sendInterest(occu.id_people)"> Send intrest</a>
                                                                         </span>
                                                                         <hr/>
                                                                     </div>
