--- a/src/app/main/dashboard/inbox/inbox.html
+++ b/src/app/main/dashboard/inbox/inbox.html
@@ -180,7 +180,7 @@
                                             <div class="col-md-12">
                                                 <div style="margin-top:20px"><a
                                                         style="font-size:13px;color: red;margin-right: 20px" ng-click="sendInterest(item.id_people)"> Send
-                                                    Interest</a><a style="font-size:13px;color: red"> View Profile</a>
+                                                    Interest</a><a ng-click="viewProfile(item.id_people)" style="font-size:13px;color: red"> View Profile</a>
                                                 </div>
 
                                                 <hr/>
