--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -540,17 +540,17 @@
                                             <tbody>
                                             <tr>
                                                 <td> Education </td>
-                                                <td> Any Education </td>
+                                                <td> {{pref.education}} </td>
                                                 <td><i class="fa fa-check-circle" style="color: #009926"></i> </td>                </td>
                                             </tr>
                                             <tr>
                                                 <td> Occupation </td>
-                                                <td> Any Occupation </td>
+                                                <td> {{pref.occupation}} </td>
                                                 <td><i class="fa fa-check-circle" style="color: #009926"></i> </td>                </td>
                                             </tr>
                                             <tr>
                                                 <td> Annual Income </td>
-                                                <td> Any Annual Income  </td>
+                                                <td> {{pref.income}}  </td>
                                                 <td><i class="fa fa-check-circle" style="color: #009926"></i> </td>                </td>
                                             </tr>
 
@@ -573,22 +573,22 @@
                                             <tbody>
                                             <tr>
                                                 <td> Country </td>
-                                                <td> India </td>
+                                                <td> {{pref.country_name}} </td>
                                                 <td><i class="fa fa-check-circle" style="color: #009926"></i> </td>                </td>
                                             </tr>
                                             <tr>
                                                 <td> Residing State </td>
-                                                <td> Kerala </td>
+                                                <td> {{pref.state_name}} </td>
                                                 <td><i class="fa fa-check-circle" style="color: #009926"></i> </td>                </td>
                                             </tr>
                                             <tr>
                                                 <td> Residing City </td>
-                                                <td> Ernakulam  </td>
+                                                <td> {{pref.city_name}}  </td>
                                                 <td><i class="fa fa-check-circle" style="color: #009926"></i> </td>                </td>
                                             </tr>
                                             <tr>
                                                 <td> Citizenship </td>
-                                                <td> Any  </td>
+                                                <td> {{prefnationality_txt}}</td>
                                                 <td><i class="fa fa-check-circle" style="color: #009926"></i> </td>                </td>
                                             </tr>
 
@@ -607,8 +607,7 @@
                                 </div>
                                 <div class="portlet-body form">
 <p>
-    My son is a calm and understanding boy. He respects tradiational values and also has modern outlook.
-    He loves reading and hearing musics.
+   {{pref.about_partner}}
 
 </p>                                </div>
                             </div>
