--- a/src/app/toolbar/dashboard/dbToolbar.html
+++ b/src/app/toolbar/dashboard/dbToolbar.html
@@ -20,7 +20,7 @@
                 <div class="page-actions" >
                     <ul class="tool-link">
                         <!--<li  ng-class="{ toolbarActive: isActive('/app')}"><a  ui-sref="app">MY HOME</a></li>-->
-                        <li ><a  >MY HOME</a></li>
+                        <li ><a  ui-sref="app">MY HOME</a></li>
                         <li ><a ui-sref="matches">MATCHES</a></li>
                         <li><a ui-sref="search">SEARCH</a></li>
                         <li><a ui-sref="recomendation">DAILY MATCHES</a></li>
