--- a/src/app/main/dashboard/inbox/inbox.html
+++ b/src/app/main/dashboard/inbox/inbox.html
@@ -164,7 +164,7 @@
 
                                         <div class="row ">
                                             <div class="col-md-12">
-                                                        <span><a ui-sref="viewProfile" class="profile-name">{{item.name}}</a>&nbsp;<span
+                                                        <span><a  class="profile-name">{{item.name}}</a>&nbsp;<span
                                                                 class="profile-id"> ({{item.id_people}})</span></span>
                                             </div>
                                         </div>
