--- a/src/app/toolbar/matches/matchestoolbar.html
+++ b/src/app/toolbar/matches/matchestoolbar.html
@@ -80,11 +80,14 @@
 				<!-- DOC: Remove "hide" class to enable the page header actions -->
 				<div class="main-heading-actions">
 					<ul class="main-tool-link uppercase">
-						<li><a ng-class="{ activetoolbar: mainlink == 'newMatches' }" ng-click="newMatches()" >New matches(40)</a></li>
-						<li><a ng-class="{ activetoolbar: mainlink =='notYetViewed' }" ng-click="notYetViewed()">Yet to be viewed(171)</a></li>
-						<li><a ng-class="{ activetoolbar: mainlink =='viewed' }" ng-click="viewed()" >Viewed and not contacted(55)</a></li>
-						<li><a ng-class="{ activetoolbar: mainlink =='shortlisted' }" ng-click="shortlisted()" >Shortlisted(35)</a></li>
-						<li><a ng-class="{ activetoolbar: mainlink =='mutalmatches' }" ng-click="mutalmatches()" >Mutal matches(40)</a></li>
+						<li><a ng-class="{ activetoolbar: mainlink == 'newMatches' }" ng-click="newMatches()" >New matches</a></li>
+						<li><a ng-class="{ activetoolbar: mainlink =='notYetViewed' }" ng-click="notYetViewed()">Yet to be viewed</a></li>
+						<li><a ng-class="{ activetoolbar: mainlink =='viewed' }"
+							   ng-click="viewed()" >Viewed and not contacted</a></li>
+						<li><a ng-class="{ activetoolbar: mainlink =='shortlisted' }"
+							   ng-click="shortlisted()" >Shortlisted</a></li>
+						<li><a ng-class="{ activetoolbar: mainlink =='mutalmatches' }"
+							   ng-click="mutalmatches()" >Mutal matches</a></li>
 						<!--<li><a ng-class="{ activetoolbar: mainlink =='more' }" ng-click="more()" >More </a></li>-->
 					</ul>
 				</div>
